# tiny_agent

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
bench/: CMakeLists.txt  bench_agent.cpp
examples/: 01_basic_chat.cpp  02_tool_calling.cpp  03_nested_agents.cpp  04_mcp_client.cpp  05_middleware.cpp  06_deep_agent.cpp  07_multimodal.cpp  08_batch.cpp  09_init_chat_model.cpp  10_builtin_middleware.cpp  11_skills.cpp  12_mcp_http.cpp  13_embeddings_retriever.cpp  14_bind_and_kwargs.cpp  15_llm_summarize.cpp  16_deep_agent_custom.cpp  CMakeLists.txt
examples/middleware/: CMakeLists.txt  call_limits.cpp  context_editing.cpp  custom_middleware.cpp  full_stack.cpp  logging.cpp  pii_protection.cpp  rationalize.cpp  retry_and_fallback.cpp  summarize.cpp  system_prompt.cpp  trim_history.cpp
examples/skills/code-review/: SKILL.md
examples/skills/refactor/: SKILL.md
examples/skills/summarize/: SKILL.md
include/tiny_agent/: agent.hpp  batch.hpp  init_chat_model.hpp  init_embeddings.hpp  retriever.hpp  tiny_agent.hpp
include/tiny_agent/agents/: all.hpp  base.hpp  create.hpp  deep_agent.hpp
include/tiny_agent/core/: llm.hpp  log.hpp  middleware.hpp  model.hpp  parser.hpp  runnable.hpp  tool.hpp  types.hpp
include/tiny_agent/embeddings/: cohere.hpp  core.hpp  gemini.hpp  mistral.hpp  openai.hpp  voyageai.hpp
include/tiny_agent/mcp/: client.hpp  http_transport.hpp  transport.hpp
include/tiny_agent/memory/: cache.hpp  store.hpp
include/tiny_agent/middleware/: all.hpp  context_editing.hpp  logging.hpp  model_call_limit.hpp  model_fallback.hpp  model_retry.hpp  pii.hpp  rationalize.hpp  retry.hpp  summarize.hpp  system_prompt.hpp  tool_call_limit.hpp  trim_history.hpp
include/tiny_agent/providers/: anthropic.hpp  cohere.hpp  gemini.hpp  local.hpp  mistral.hpp  openai.hpp  voyageai.hpp
include/tiny_agent/skills/: loader.hpp  registry.hpp  skill.hpp
include/tiny_agent/vectorstore/: base.hpp  flat.hpp  hnswlib.hpp  qdrant.hpp
tests/: CMakeLists.txt  test_agent.cpp  test_init_chat_model.cpp  test_init_embeddings.cpp  test_memory.cpp  test_middleware.cpp  test_middleware_builtins.cpp  test_rationalize.cpp  test_retriever.cpp  test_skills.cpp  test_summarize.cpp  test_tool.cpp  test_types.cpp  test_vectorstore.cpp
